# OpenSiv3DCI

./: ARCHITECTURE.md
App/: .gitignore
e2e/: .gitignore  CMakeLists.txt  Config.ts  Devices.ts  Runner.ts  Siv3DTest.pre.js  TextInput.spec.ts  package-lock.json  package.json  tsconfig.json
e2e/src/: RunnerFactory.ts  TextInput.e2e.ts
e2e/src/BrowserStack/: Config.ts  Devices.ts  Runner.ts
e2e/src/Local/: Config.ts  Runner.ts
e2e/tests/: Dialog.e2e.ts  System.e2e.ts  TextInput.e2e.ts
